[gd_scene load_steps=7 format=3 uid="uid://bicohxt6wv1pp"]

[ext_resource type="FontFile" uid="uid://bph7b5e80n2ph" path="res://fonts/CompassPro.otf" id="1_1bn4x"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_c2sr3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16avo"]
bg_color = Color(0.158636, 0.210229, 0.495789, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gpheo"]
bg_color = Color(0.156863, 0.211765, 0.494118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ofro"]
bg_color = Color(0.156863, 0.211765, 0.494118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yo53"]
bg_color = Color(0.156863, 0.211765, 0.494118, 1)

[node name="Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_c2sr3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -612.0
offset_top = -264.0
offset_right = 600.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.021, 0.026, 0.119, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -136.5
offset_right = 172.0
offset_bottom = 136.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="VolverAlNivel" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1bn4x")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_16avo")
text = "VOLVER AL NIVEL"

[node name="ReiniciarNivel" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1bn4x")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_gpheo")
text = "REINICIAR NIVEL"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1bn4x")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7ofro")
text = "OPCIONES"

[node name="MenuPrincipal" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1bn4x")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7yo53")
text = "VOLVER AL CAMPAMENTO "

[connection signal="pressed" from="VBoxContainer/VolverAlNivel" to="." method="_on_volver_al_nivel_pressed"]
[connection signal="pressed" from="VBoxContainer/ReiniciarNivel" to="." method="_on_reiniciar_nivel_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuPrincipal" to="." method="_on_menu_principal_pressed"]
